--- a/config/database.yml
+++ b/config/database.yml
@@ -16,9 +16,10 @@ development:
   adapter: postgresql
   encoding: unicode
   database: bidsystems_development
+  host: localhost
   pool: 5
-  username: bidsystems
-  password:
+  username: tai
+  password: 12345678
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -42,14 +43,16 @@ test:
   adapter: postgresql
   encoding: unicode
   database: bidsystems_test
+  host: localhost
   pool: 5
-  username: bidsystems
-  password:
+  username: tai
+  password: 12345678
 
 production:
   adapter: postgresql
   encoding: unicode
   database: bidsystems_production
+  host: localhost
   pool: 5
-  username: bidsystems
-  password:
+  username: tai
+  password: 12345678
